Immutable EE10 Configurations
WIP don't clone Configurations